# delopay-sdk

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dast-zap-baseline.yml  dependency-review.yml  quality.yml  release.yml  security.yml  staging-smoke-canary.yml
config/openapi-generator/: java.yaml  python.yaml  typescript.yaml
docs/security/: ci-security-gates.md  incident-runbook.md  pentest-checklist.md  security-baseline.md
openapi/: openapi.json
scripts/: build-all.ps1  bump-version.ps1  canary-check.ps1  check-all.ps1  generate-all.ps1  smoke-staging.ps1  sync-openapi.ps1  test-all.ps1
sdks/java/: build.gradle  gradle.properties  settings.gradle
sdks/java/src/main/java/io/delopay/sdk/: ApiError.java  DelopayClient.java  DelopayClientOptions.java  PaymentsClient.java  ProvidersClient.java
sdks/java/src/main/java/io/delopay/sdk/internal/: Jsons.java  (+1 more)
sdks/java/src/test/java/io/delopay/sdk/: DelopayClientTest.java  PaymentsClientTest.java  ProvidersClientTest.java
sdks/python/: README.md  pyproject.toml
sdks/python/src/delopay/: __init__.py  client.py  errors.py  http.py  models.py  payments.py  providers.py
sdks/python/tests/: test_client.py  test_payments.py  test_providers.py
sdks/typescript/: .eslintrc.cjs  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  http.ts  index.ts  payments-client.ts  providers-client.ts  types.ts
sdks/typescript/tests/: client.test.ts  http-client.test.ts  payments-client.test.ts  providers-client.test.ts
(+10 files in other folders)
