[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delopay"
version = "0.1.0"
description = "Official DeloPay Python SDK"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "DeloPay", email = "support@deloxity.com"}
]
license = {text = "Proprietary"}
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]



