[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delopay"
version = "0.1.0"
description = "Official DeloPay Python SDK"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "DeloPay", email = "support@deloxity.com"}
]
license = {text = "Proprietary"}
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
